@@ -4,6 +4,7 @@
         - Introduce --tokens-file parameter
         - Introduce --skip-inline-tokens parameter
         - Minor cleanups and improvements
+        - Introduce --skip-inline-tags parameter
 
 1.00 2021-02-18 Release
         - -s option added that uses sentence boundaries
